# plugin-freedom-system

./: CLAUDE.md  CMakeLists.txt  PLUGINS.md  test-results-state-delegation.md
.claude/aesthetics/: manifest.json
.claude/aesthetics/vintage-bakelite-001/: aesthetic.md  metadata.json  preview.html
.claude/agents/: dsp-agent.md  foundation-agent.md  gui-agent.md  research-agent.md  shell-agent.md  troubleshooter.md  validator.md
.claude/commands/: show-standalone.md
.claude/docs/: integration-contracts.md  skill-documentation-templates.md
.claude/hooks/: SubagentStop.sh
.claude/schemas/: README.md  subagent-report.json  validator-report.json
.claude/skills/: WORKFLOW-TRACE-VERIFICATION.md  decision-menu-audit-report.md
.claude/skills/build-automation/references/: integration-examples.md  troubleshooting.md
.claude/skills/plugin-ideation/: SKILL.md
.claude/skills/plugin-lifecycle/: SKILL.md  SKILL.md.backup-20251110-173659
.claude/skills/plugin-lifecycle/references/: cache-management.md  error-handling.md  installation-process.md  uninstallation-process.md
.claude/skills/plugin-planning/: SKILL.md
.claude/skills/plugin-planning/assets/: decision-menu-stage-0.md  decision-menu-stage-1.md
.claude/skills/plugin-workflow/: SKILL.md
.claude/skills/plugin-workflow/references/: dispatcher-pattern.md  error-handling.md  integration-contracts.md  milestone-terminology.md  stage-2-foundation.md  stage-5-validation.md
.claude/skills/ui-mockup/: SKILL.md
.claude/skills/workflow-reconciliation/assets/: reconciliation-examples.md
plugins/AutoClip/: .continue-here.md  CHANGELOG.md
plugins/AutoClip/.ideas/: creative-brief.md
plugins/AutoClip/.ideas/mockups/: v5-integration-checklist.md
plugins/AutoClip/Presets/: Default.preset  Extreme Clip.preset  Heavy Clip.preset  Moderate Clip.preset  Subtle Clip.preset
plugins/ClapMachine/.ideas/: .continue-here.md
plugins/ClapMachine/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v2-ui-test.html  v2-ui.yaml
plugins/DriveVerb/: CHANGELOG.md
plugins/DriveVerb/Presets/: 01 - Default.preset  02 - Subtle Warmth.preset  03 - Driven Ambience.preset  04 - Dark Filtered Hall.preset  05 - Aggressive Saturation.preset
plugins/Drum808/: .continue-here.md  CHANGELOG.md
plugins/Drum808/Presets/: 01-Factory-Default.preset  02-Deep-Kick.preset  03-Crispy-Hats.preset  04-Tight-Punch.preset
plugins/DrumRoulette/: .continue-here.md
plugins/DrumRoulette/.ideas/: .continue-here.md  architecture.md  parameter-spec.md
plugins/DrumRoulette/.ideas/mockups/: v3-ui-test.html  v3-ui.yaml
plugins/FlutterVerb/: .continue-here.md
plugins/LushPad/: CMakeLists.txt
plugins/LushVerb/: .continue-here.md  NOTES.md
plugins/LushVerb/.ideas/: parameter-spec.md
plugins/LushVerb/.ideas/mockups/: v3-integration-checklist.md
plugins/LushVerb/Source/: PluginProcessor.cpp  PluginProcessor.h
plugins/MinimalKick/.ideas/: parameter-spec.md
plugins/MinimalKick/.ideas/mockups/: v2-CMakeLists-SNIPPET.txt  v2-PluginEditor-TEMPLATE.cpp  v2-PluginEditor-TEMPLATE.h  v2-integration-checklist.md  v2-ui.html
plugins/MuSam/: .continue-here.md  CMakeLists.txt  JUCE_SETUP.md  NOTES.md  install-juce.sh  validation_stage3_report.json
plugins/MuSam/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  plan.md
plugins/MuSam/.ideas/mockups/: v1-CMakeLists.txt  v1-PluginEditor.cpp  v1-PluginEditor.h  v1-integration-checklist.md  v1-ui-test.html  v1-ui.html  v1-ui.yaml
plugins/MuSam/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/MuSam/Source/ui/public/: index.html
plugins/OrganicHats/: CMakeLists.txt
plugins/OrganicHats/.ideas/: .continue-here.md
plugins/OrganicHats/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Scatter/.ideas/mockups/: v1-ui-test.html  v1-ui.yaml  v4-ui-test.html  v4-ui.yaml
plugins/Sektor/: .continue-here.md  CHANGELOG.md  CMakeLists.txt  NOTES.md
plugins/Sektor/.ideas/: architecture.md  creative-brief.md  parameter-spec.md  phase-3.1-completion.md  plan.md
plugins/Sektor/.ideas/mockups/: v1-CMakeLists.txt  v1-PluginEditor.cpp  v1-PluginEditor.h  v1-integration-checklist.md  v1-ui-test.html  v1-ui.html  v1-ui.yaml
plugins/Sektor/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugins/Sektor/Source/ui/public/: index.html
plugins/TapeAge/: .continue-here.md  CHANGELOG.md  CMakeLists.txt
plugins/TapeAge/.ideas/: creative-brief.md  parameter-spec.md
plugins/TapeAge/.ideas/mockups/: v3-CMakeLists.txt  v3-PluginEditor.cpp  v3-PluginEditor.h  v3-integration-checklist.md  v3-ui.html  v3-ui.yaml
plugins/TapeAge/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: test-state-delegation.sh
troubleshooting/api-usage/: juce-dsp-reverb-wrong-api-methods-FlutterVerb-20251111.md  rotary-slider-absolute-positioning-interaction-TapeMachine-20251107.md  webview-parameter-not-updating-wrong-event-format-JUCE-20251108.md
troubleshooting/build-failures/: juceheader-not-found-cmake-JUCE-20251106.md  ui-trigger-button-processblock-invocation-thread-violation-JUCE-20251106.md
troubleshooting/dsp-issues/: dsp-filters-not-responding-to-parameters-MicroGlitch-20251106.md
troubleshooting/gui-issues/: invisible-rotary-sliders-flexbox-constraints-JUCE-20251106.md  rotating-lighting-unrealistic-knobs-JUCE-20251110.md
troubleshooting/parameter-issues/: ableton-preset-interference-state-restoration-JUCE-20251107.md  audiothumbnail-waveform-not-persisting-MicroGlitch-20251106.md
troubleshooting/patterns/: juce8-critical-patterns.md
troubleshooting/runtime-issues/: vst3-bus-config-effect-missing-input-Shake-20251106.md  webbrowser-local-html-url-cant-be-shown-JUCE-20251107.md
